--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,16 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+serde = "^1.0.104"
+serde_derive = "^1.0.104"
 cfg-if = "0.1.10"
-wasm-bindgen = "0.2.58"
-web-sys = { version = "0.3.35", features = ['console'] }
-
+wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
+web-sys = { version = "0.3.35", features = ["console"] }
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.6", optional = true }
-
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
 # allocator, however.
