try rename the package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustwasm"
+name = "my-first-worker"
 version = "0.1.0"
 authors = ["alank <alankan976@gmail.com>"]
 edition = "2018"
