--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Publish
-        uses: alank976/wrangler-action@support-rust-wasm
+        uses: alank976/wrangler-action@1.6.0
         with:
           apiToken: ${{ secrets.WRANGLER_API_TOKEN }}
           environment: 'prd'
