--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["alank <alankan976@gmail.com>"]
 edition = "2018"
 
+# FIXME: pending to fix: https://github.com/rustwasm/wasm-pack/issues/782
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
